<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.contacts.groupcontactsmanager.Import_6_FormatToContacts" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="23dp"
        android:src="@drawable/smartphone11" />
    
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_send_black_36dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@+id/imageView4"
        android:src="@drawable/ic_send_black_36dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/spreadsheet5" />

        <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_marginRight="11dp"
        android:layout_toLeftOf="@+id/imageView4"
        android:src="@drawable/ic_send_black_36dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_contacts_black_48dp" />
    
    <Button
        android:id="@+id/insertContactsButton"
        android:layout_width="120dp"        
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView2"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="38dp"
        android:background="@drawable/general_button_display"        
        android:textColor="#575a5d"
        android:text="@string/insertContacts" />

    <Button
        android:id="@+id/startActivityButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertContactsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/start_button"
         android:textStyle="bold"    
        android:onClick="navigate1"
        android:text="@string/start" />
    
     <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:textColor="#ef5d57"     
        android:textStyle="bold" 
        android:textSize="20sp" 
        android:text="@string/manual" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/title_activity_import_6__format_to_contacts"
         android:textAppearance="?android:attr/textAppearanceMedium" />
         
</RelativeLayout>
